@@ -1,3 +1,4 @@
+* Check read access on field in search order (issue8189)
 * Add base64 converter to URL map
 * Add HTML widget
 * Support import of native numeric, date and datetime data
